# NSU

./: .gitignore  README.md  allfiles.txt  main.txt  new_key
C/H_W/H_W2_X_O/O.c/: Task1.c  Task5.c  Task8.c  stats_symbols_Task6.c
C/H_W/H_W3_Circle_Arr/: Task3_1.c  Task3_3.c
C/H_W/H_W4/: Task4_5.c  Task4_6.c
C/H_W/H_W5_OpenFile/: Task5_1.c  Task5_2.c  in.txt
C/H_W/H_W6_NumSyst_BitOper/: 1.c
C/Lab_begin/: Lab_begin.c
C/lab11/: in.txt  out.txt
C/lab1_1/: main.c  out.txt
C/lab1_2/: main.c
C/lab1_2/KMP/: kmp.h
C/lab2/: main.c
C/lab3_1/: main.c  main3.c  main4.c
C/lab5/: .gitignore  CMakeLists.txt  huffman.h
C/lab5/Errors/: errors.c
C/lab6_0/: main.c
C/lab7/Errors/: errors.c
C/lab7/TopSort/: top_sort.c
C/lab8_0/: main.c
C/lab8_0/Errors/: errors.c  errors.h
C/lab8_0/Kraskal/: kraskal.c
C/lab8_1/Errors/: errors.h
C/lab9/: .gitignore  CMakeLists.txt
C/lab9/Dijkstra/: dijkstra.c
C/lab9/Errors/: errors.c  errors.h
Cpp/: README.md
Cpp/lab0/src/: ArgumentReader.cpp
Cpp/lab0/src/include/: ArgumentReader.hpp
Cpp/lab1/: .gitignore  CMakeLists.txt
Cpp/lab1/src/: Fibonacci.cpp
Cpp/lab1/src/include/: LFUCache.hpp
Cpp/lab1/tests/: main_test.cpp
Cpp/lab1/tests/src/: LRUCacheTest.cpp
Cpp/lab2/nonograms/: 1Snake.txt  3Question.txt
Cpp/lab2/src/: RunProgram.cpp  grid.cpp  nonogram.cpp
Cpp/lab3/: main.cpp
EVM/Lab2/: fast.c  lab2.cpp
EVM/Lab3/: 032.s  1printf.s  main.c  s64.s
H_W/H_W2_X_O/O.c/: Task2.c  Task3.c  Task4.c  Task7.c
H_W/H_W3_Circle_Arr/: Task3_2.c  Task3_4.c
H_W/H_W4/: Task4_1.c  Task4_2.c
H_W/H_W5_OpenFile/: Task5_3.c  Task5_4.c  out.txt
H_W/task queen/: main.c
Lab0/: CMakeLists.txt  Readme.md  main.cpp
Lab0/src/: CountWords.cpp  CounterWord.cpp  Print.cpp  Printer.cpp  Reader.cpp  Start.cpp
Lab0/src/include/: CountWords.hpp  CounterWord.hpp  Print.hpp  Printer.hpp  Reader.hpp  Start.hpp
Lab0/tests/: output.txt
Lab1/: lab1.cpp
Lab2/: fast.c
Lab3/: 032.s  064.s  0printf.s  132.s  164.s  1printf.s  main.cpp  main.s  s32.s
NetWork/: go.mod  router.go
NetWork/DHCP/: DHCP.go
NetWork/DNS/: DNS.go
NetWork/client/: client.go
NetWork/router/: router.go
NetWork/switcher/: switcher.go
OPP/lab1/: main2.cpp
OPP/lab2/consistent/: main.cpp
OPP/lab2/parallel/: main1.cpp  main11.cpp  main2.cpp  main3.cpp
OPP/lab3/: main.cpp  text.txt
base64/: main.c  out.txt  test.c
lab0/: CMakeLists.txt  Readme.md  in.txt  main.c
lab0/src/: Sorter.cpp
lab0/src/include/: CounterWord.hpp  Sorter.hpp
lab0/tests/: lab0.txt  test.cpp
lab1/: .gitignore  1  2  CMakeLists.txt  main.cpp  main1.cpp
lab1/exception/: CacheException.hpp  FibonacciE.hpp
lab1/exception/include/: CacheE.hpp
lab1/src/: ArgumentReader.cpp  Fibonacci.cpp  ICache.cpp  ICacheable.cpp  LFUCache.cpp  LRUCache.cpp  Reader.cpp  ReaderFile.cpp  RunProgram.cpp  RunProgramm.cpp
lab1/src/include/: ArgumentReader.hpp  Fibonacci.hpp  ICache.hpp  ICacheable.hpp  LFUCache.hpp  LRUCache.hpp  Reader.hpp  ReaderFile.hpp  RunProgram.hpp  RunProgramm.hpp
lab1/tests/: CMakeLists.txt  LFUCacheTest.cpp  test.cpp
lab1/tests/src/: LFUCacheTest.cpp  LRUCacheTest.cpp
lab11/: main.c
lab1_0/: main.c
lab1_2/: CMakeLists.txt  main.c
lab1_2/Errors/: errors.c  errors.h
lab1_2/KMP/: kmp.c
lab2/: .gitignore  CMakeLists.txt  main.cpp  vers1
lab2/consistent/: a.out
lab2/nonograms/: 2Snowflake.txt  4Rook.txt  5Bus.txt
lab2/parallel/: 1.out  2  2.out  3.out  main2.cpp
lab2/src/: RumProgamm.cpp  game.cpp  grid.cpp  menu.cpp  nonogram.cpp
lab2/src/include/: Levels.hpp  RumProgamm.hpp  RunProgram.hpp  config.h  game.hpp  grid.hpp  menu.hpp  nonogram.hpp
lab3/: CMakeLists.txt  code (2).cpp  main  main.cpp
lab3/src/: ConfigParser.cpp  ConverterFactory.cpp  CustomConverter.cpp  Menu.cpp  MixerConverter.cpp  SilenceConverter.cpp  WavFile.cpp
lab3/src/exception/: MixerConverterException.cpp  WavFileException.cpp
lab3/src/exception/include/: MixerConverterException.hpp  WavFileException.hpp
lab3/src/include/: ConfigParser.hpp  Converter.hpp  ConverterFactory.hpp  CustomConverter.hpp  Menu.hpp  MixerConverter.hpp  SilenceConverter.hpp  WavFile.hpp
lab3_0/: main.c
lab3_1/: main2.c
lab4/: .text  main.c  main.cpp
lab5/: huffman.c  main  main.c  main.cpp  main.py  main1  main1.cpp
lab5/Decode/: decode.c  decode.h
lab5/Encode/: encode.c  encode.h
lab5/Errors/: errors.h
lab6/: main.cpp
lab7/: .gitignore  CMakeLists.txt  main.c
lab7/Errors/: errors.h
lab7/TopSort/: top_sort.c  top_sort.h
lab8_0/: CMakeLists.txt
lab8_0/Kraskal/: kraskal.h
lab8_1/: CMakeLists.txt  main.c
lab8_1/Errors/: errors.c  errors.h
lab8_1/Prim/: prim.c  prim.h
lab9/: main.c
lab9/Dijkstra/: dijkstra.c  dijkstra.h
os/lab1/: dynamic_lib.c  hello.c  hellod  hellol  static_lib.c
os/lab2/: hello.c  not_syscal  not_syscal.c  sys_hello  sys_hello.c  syscall_hello  syscall_hello.c
os/lab3/: .gitignor  2  main1  main1.c  main2.c  read_symlink
os/lab3/4321/: 54321  654321
os/lab4/: main  main.c  main21  main21.c  main22  main22.c  main22c  main22copy.c  man
os/lab5/: main  main.c  mainc  maincopy.c
os/lab6/: tcp_client  tcp_client.c  tcp_server  tcp_server.c  udp_client  udp_client.c  udp_server  udp_server.c
(+7 files in other folders)
